--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
   <div  class="card text-center" style="width: 237px;height: 454px;">
     <div class="card-body">
       <h5 class="card-title"><u>Area Calculation</u></h5>
-      <div id="result">
-
+      <div >
+<ul id="result"></ul>
       </div>
       
     </div>
