--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <div class="card-body text-center">
                   <h5 class="card-title">Parallelogram</h5>
                   <p class="card-text">Area (A) = b   x    h</p>
-                  <h6>b=<span id="base-parallelogram">10</span>cm, h=<span id="hight-parallelogram">12</span>cm</h6>
+                  <h6>b=<span id="base-parallelogram">10</span>cm, h=<span id="height-parallelogram">12</span>cm</h6>
                     <button id="btn-parallelogram" class="btn btn-primary ps-3 px-3 text-center mx-3 mt-3 mb-5 ">Calculate</button>
                 
               </div>
