--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     0.5  x   d<sub>1</sub> x
                     d<sub>1</sub></p>
                     <p> <b>d<sub>1</sub>=
-                      <span id="rombosh-d1">16</span>cm    d<sub>2</sub>=<span id="rombosh-d2">8</span>cm</b> </p>
+                      <span id="rhombus-d1">16</span>cm    d<sub>2</sub>=<span id="rhombus-d2">8</span>cm</b> </p>
                     <button id="btn-rhombus" class="btn btn-primary ps-3 px-3 text-center mx-5 mt-3 mb-3">Calculate</button>
                 
               </div>
