--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     0.5  x   d<sub>1</sub> x
                     d<sub>1</sub></p>
                     <p> <b>d<sub>1</sub>=
-                      <span id="rhombus-d1">16</span>cm    d<sub>2</sub>=<span id="rhombus-d2">8</span>cm</b> </p>
+                      <span id="hombus-d1">16</span>cm    d<sub>2</sub>=<span id="rhombus-d2">8</span>cm</b> </p>
                     <button id="btn-rhombus" class="btn btn-primary ps-3 px-3 text-center mx-5 mt-3 mb-3">Calculate</button>
                 
               </div>
@@ -98,7 +98,7 @@
                   <p class="card-text">Area (A) =
                     0.5   x  p x
                     b</p>
-                    <p> <b> p = 6cm, b = 10cm</b></p>
+                    <p> <b> p = <span id="pentagon-base">6</span> cm, b = <span id="pentagon-height">6</span>cm</b></p>
                     <button id="btn-pentagon" class="btn btn-primary ps-3 px-3 text-center me-5 mt-3 mb-3 ">Calculate</button>
                 
               </div>
